# sqlx-demo

./: Cargo.toml
